# mcp-debian

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  mcp.json  package-lock.json  pyproject.toml  server.py
.github/workflows/: ci.yml  docker.yml
tests/: test_server.py
