[project]
name = "mcp-debian"
version = "0.2.0"
description = "Perform actions on a Debian server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastmcp<3"]

[project.scripts]
mcp-debian = "server:mcp.run"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.6", "ty>=0.0.23"]

[tool.ruff.lint]
extend-select = ["I"]
